<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.jamuz</groupId>
    <artifactId>JaMuz</artifactId>
    <version>0.7.2-dev</version>
    <url>https://github.com/phramusca/JaMuz/</url>
    <packaging>jar</packaging>
    
    <profiles>
        <profile>
            <id>skip-tests</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.0.0</version>
                        <configuration>
                            <inherited>true</inherited>
                            <skipTests>true</skipTests>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    
    <build>
        <finalName>${project.artifactId}</finalName>
        <resources>
            <resource>
                <directory>res</directory>
            </resource>
            <!--Files in the target-data-local directory will take precedence over files in the target-data directory.-->
            <resource>
                <directory>target-data-local</directory>
                <targetPath>${project.build.directory}</targetPath>
            </resource>
            <resource>
                <directory>target-data</directory>
                <targetPath>${project.build.directory}</targetPath>
            </resource>
        </resources>
        
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            
            <!--This is to include dependencies and generate manifest in a JaMuz-jar-with-dependencies.jar-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest>
                                    <mainClass>jamuz.Main</mainClass>
                                </manifest>
                                <manifestEntries>
                                    <Bundle-Name>${project.artifactId}</Bundle-Name>
                                    <Bundle-Version>${project.version}</Bundle-Version>
                                    <Bundle-Date>${current.date}</Bundle-Date>
                                    <Implementation-Title>${project.artifactId}</Implementation-Title>
                                    <Implementation-Version>${project.version}</Implementation-Version>
                                    <Implementation-URL>${project.url}</Implementation-URL>
                                </manifestEntries>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
 
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>local-repo</id>
            <url>file://${project.basedir}/lib</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/ws.schild/jave-all-deps -->
        <dependency>
            <groupId>ws.schild</groupId>
            <artifactId>jave-all-deps</artifactId>
            <version>3.1.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.39.2.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.14.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/commons-net/commons-net -->
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp -->
        <dependency>
            <groupId>com.squareup.okhttp3</groupId>
            <artifactId>okhttp</artifactId>
            <version>4.11.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/jcharts/jcharts -->
        <dependency>
            <groupId>jcharts</groupId>
            <artifactId>jcharts</artifactId>
            <version>0.7.5</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/de.u-mass/lastfm-java -->
        <dependency>
            <groupId>de.u-mass</groupId>
            <artifactId>lastfm-java</artifactId>
            <version>0.1.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.holgerbrandl/themoviedbapi -->
        <dependency>
            <groupId>com.github.holgerbrandl</groupId>
            <artifactId>themoviedbapi</artifactId>
            <version>1.12</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.zxing/core -->
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>3.2.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jopendocument/jOpenDocument -->
        <dependency>
            <groupId>org.jopendocument</groupId>
            <artifactId>jOpenDocument</artifactId>
            <version>1.3</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.55</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>13.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/fm.last/coverartarchive-api -->
        <dependency>
            <groupId>fm.last</groupId>
            <artifactId>coverartarchive-api</artifactId>
            <version>2.0.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.github.docker-java/docker-java -->
        <dependency>
            <groupId>com.github.docker-java</groupId>
            <artifactId>docker-java</artifactId>
            <version>3.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.14</version>
        </dependency>
        <dependency>
            <groupId>org.tukaani</groupId>
            <artifactId>xz</artifactId>
            <version>1.9</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.5.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>2.2</version>
        </dependency>

        <!--Local jar dependencies -->
        <dependency>
            <groupId>com.example</groupId>
            <artifactId>beaglebuddy_mp3</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.example</groupId>
            <artifactId>java-express</artifactId>
            <version>0.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.example</groupId>
            <artifactId>jaudiotagger</artifactId>
            <version>2.2.6</version>
        </dependency>
        <dependency>
            <groupId>com.example</groupId>
            <artifactId>musicbrainzws2-java</artifactId>
            <version>1.0.1</version>
        </dependency>
    </dependencies>
 
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
</project>